--- a/public/huong-dan-su-dung-IOS.html
+++ b/public/huong-dan-su-dung-IOS.html
@@ -10,37 +10,48 @@
 <body>
 	<div class="container-fluid">
 		<div class="number-header mt-10 title">DÀNH CHO HỆ ĐIỀU HÀNH iOS</div>
-		<div class="number-header mt-10 step">Bước 1: Mở file excel cần tải lên trên thiết bị từ các ứng dụng như Email, Facebook, Messenger, ….</div>
+		<div class="number-header mt-10 step">
+			Bước 1: Mở file excel cần tải lên trên thiết bị từ các ứng dụng như Email, Facebook, Messenger, ….
+		</div>
 		<div class="image">
 			<img src="images/guide/ios/Group-8.jpg" alt="">
 		</div>
 		<div class="number-header mt-10 step">
-		Bước 2: Nhấn Chọn biểu tượng <strong>“Chia sẻ”</strong> ở góc bên phải trên màn hình thiết bị
+			Bước 2: Nhấn Chọn biểu tượng <strong>“Chia sẻ”</strong> ở góc bên phải trên màn hình thiết bị
 		</div>
 		<div class="image">
 			<img src="images/guide/ios/Group 9.png" alt="">
 		</div>
 		<div class="number-header mt-10 step">
-		Bước 3: Nhấn Chọn biểu tượng <strong>“Tạo đơn ViettelPost”</strong>
+			Bước 3:  Trong lần đầu tải lên, chúng ta có thể sẽ được yêu cầu Kết nối Tạo đơn ViettelPost trên thiết bị của bạn. Nhấn chọn <strong>“More”, gạt biểu tượng “Tạo đơn ViettelPost” sang màu xanh</strong>
 		</div>
 		<div class="image">
-			<img src="images/guide/ios/Group 10.png" alt="">
-		</div>
-		<div class="number-header mt-10 step">
-		Bước 4: Nhấn Chọn nút <strong>“TẠO ĐƠN”</strong>
+			<img src="images/guide/ios/3-1.png" alt="">
 		</div>
 		<div class="image">
-			<img src="images/guide/ios/Group 11.png" alt="">
+			<img src="images/guide/ios/3-2.png" alt="">
 		</div>
 		<div class="number-header mt-10 step">
-		Bước 5: : Nhấn chọn <strong>“TẢI LÊN”</strong>
+			Bước 4: Nhấn Chọn biểu tượng <strong>“Tạo đơn ViettelPost”</strong>
+		</div>
+		<div class="image">
+			<img src="images/guide/ios/4.png" alt="">
+		</div>
+		<div class="number-header mt-10 step">
+			Bước 5: :  Nhấn Chọn nút <strong>“TẠO ĐƠN”</strong>
+		</div>
+		<div class="image">
+			<img src="images/guide/ios/5.png" alt="">
+		</div>
+
+		<div class="number-header mt-10 step">
+			Bước 6: Nhấn chọn <strong>“TẢI LÊN”</strong>
 		</div>
 		<div class="image">
 			<img src="images/guide/ios/Group 12.png" alt="">
 		</div>
-
 		<div class="number-header mt-10 step">
-		Bước 6: Sau khi nhận được thông báo <strong>Tải file thành công</strong>, bạn có thể Xem lịch sử tải lên trên ứng dụng
+			Bước 7: Sau khi nhận được thông báo <strong>Tải file thành công</strong>, bạn có thể Xem lịch sử tải lên trên ứng dụng
 		</div>
 		<div class="image">
 			<img src="images/guide/ios/IMAGE 2018-08-08 15_37_48.png" alt="">
